'Fin TP9 - FIN TP10'

--- a/TPs/TP7/TP7_SARMIENTO_104241.ipynb
+++ b/TPs/TP7/TP7_SARMIENTO_104241.ipynb
@@ -704,7 +704,7 @@
     "\n",
     "$$\n",
     "p(x_i \\mid \\theta)\n",
-    "= \\sum_{k=1}^K \\pi_k\\,\\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "= \\sum_{k=1}^K \\pi_k\\,\\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
     "$$\n",
     "\n",
     "Luego, reescribiendo la expresión de la verosimilitud, resulta:\n",
@@ -714,7 +714,7 @@
     "= \\prod_{i=1}^{N}\n",
     "\\left[\n",
     "\\sum_{k=1}^{K}\n",
-    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
     "\\right]\n",
     "$$\n",
     "\n",
@@ -728,11 +728,11 @@
     "\\log\n",
     "\\left[\n",
     "\\sum_{k=1}^{K}\n",
-    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
     "\\right]\n",
     "$$\n",
     "\n",
-    "Sin embargo, en este caso la derivación también se vuelve compleja, dado que se tiene el logaritmo de una sumatoria, que termina acoplando los parámetros, producto de una solución no lineal, es decir, no hay solución analítica. Es aquí cuando el algoritmo EM y sus iteraciones toma protagonismo: \n",
+    "Sin embargo, en este caso la derivación también se vuelve compleja, dado que se tiene el logaritmo de una sumatoria, que termina acoplando los parámetros, producto de una solución no lineal, es decir, no hay solución analítica. Es aquí cuando el algoritmo EM y sus iteraciones toma protagonismo.\n",
     "\n",
     "#### Algoritmo EM\n",
     "\n",
@@ -752,7 +752,7 @@
     "tomando entonces, un valor en específico para $z$, es decir, tomando el valor de un cluster en particular, la probabilidad de que el dato, proveniente del cluster $k$ utilizando los parámetros actuales del modelo, vale:\n",
     "\n",
     "$$\n",
-    "p(x_i, z_i = k \\mid \\theta) = \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k).\n",
+    "p(x_i, z_i = k \\mid \\theta) = \\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k).\n",
     "$$\n",
     "\n",
     "Extendiendo esta probabilidad para todos los clusters: (En la siguiente ecuación, cada término es 0, salvo el cluster tal que $z_i$ = $k$)\n",
@@ -763,7 +763,7 @@
     "= \n",
     "\\sum_{k=1}^{K}\n",
     "\\mathbf{1}_{\\{z_i = k\\}}\\,\n",
-    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k).\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k).\n",
     "\n",
     "$$\n",
     "\n",
@@ -782,7 +782,7 @@
     "\\log p(x, z \\mid \\theta)\n",
     "= \\sum_{i=1}^{N} \\sum_{k=1}^{K} \\mathbf{1}_{\\{z_i = k\\}}\n",
     "\\left[\n",
-    "\\log \\pi_k + \\log \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "\\log \\pi_k + \\log \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
     "\\right]\n",
     "$$\n",
     "\n",
@@ -802,16 +802,16 @@
     "}\n",
     "=\n",
     "\\frac{\n",
-    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "\\pi_k \\, \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
     "}{\n",
     "\\sum_{j=1}^{K} \n",
-    "\\pi_j \\, \\mathcal{N}(x_i \\mid \\mu_j, \\sigma_j)\n",
+    "\\pi_j \\, \\mathcal{N}(x_i \\mid \\mu_j, \\Sigma_j)\n",
     "}\n",
     "$$\n",
     "\n",
     "#####  Paso M\n",
     "\n",
-    "Luego, en el paso M, se maximiza la Esperanza de la log-verosimilitud completa, es decir, contemplando las variables ocultas y utilizando las probabilidades del paso E. Esta, es la esperanza de que cada posible cluster $z$, sea el correcto para $x_i$, según los parámetros $\\theta$. Se trabaja con la esperanza dado que permite reducir el problema del logaritmo de la suma, en uno más sencillo de resolver, aprovechando las expresiones con las variables ocultas.\n",
+    "Luego, en el paso M, se maximiza la Esperanza de la log-verosimilitud completa, es decir, contemplando las variables ocultas y utilizando las probabilidades del paso E. Esta, es la esperanza de que cada posible cluster $z$, sea el correcto para $x_i$, según los parámetros $\\theta$. Se trabaja con la esperanza dado que permite reducir el problema del logaritmo de la suma, en uno más sencillo de resolver, aprovechando las expresiones con las variables ocultas. Además, permite llegar a una expresión que no depende de las $z$, que desconocemos.\n",
     "\n",
     "$$\n",
     "\\mathbb{E}_{z \\mid x, \\theta}\n",
@@ -823,7 +823,7 @@
     "\\Big(\n",
     "\\log \\pi_k\n",
     "+ \n",
-    "\\log \\mathcal{N}(x_i \\mid \\mu_k, \\sigma_k)\n",
+    "\\log \\mathcal{N}(x_i \\mid \\mu_k, \\Sigma_k)\n",
     "\\Big)\n",
     "$$\n",
     "\n",
@@ -846,7 +846,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\sigma_k^{(t+1)} \n",
+    "\\Sigma_k^{(t+1)} \n",
     "= \n",
     "\\frac{1}{N_k}\n",
     "\\sum_{i=1}^{N} \n",
