--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -304,6 +304,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "666b3cf2",
+   "metadata": {},
+   "source": [
+    "Se observa que las clases se encuentran desbalanceadas, predominan las primeras 4 clases"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "90e53b67",
    "metadata": {},
    "source": [
@@ -423,6 +431,14 @@
     "final_distribution = final_distribution\n",
     "\n",
     "final_distribution.head(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ec22546",
+   "metadata": {},
+   "source": [
+    "Los géneros se encuentran más balanceados, por lo que no hay algunos que predominen demasiado"
    ]
   },
   {
@@ -950,7 +966,9 @@
     "\n",
     "Para el caso de la multinomial, esta probabilidad (sin considerar la marginal de x) puede escribirse como:\n",
     "\n",
-    "$p( y = k | x ) \\propto c_y \\cdot \\prod_{j=1}^{V}(\\theta_{j}^{(k)})^{N_j}$ \n",
+    "$$\n",
+    "p( y = k | x ) \\propto c_y \\cdot \\prod_{j=1}^{V}(\\theta_{j}^{(k)})^{N_j}\n",
+    "$$ \n",
     "\n",
     "Donde:\n",
     "\n",
@@ -1000,7 +1018,7 @@
     "{\\sum_{m=1}^{V} (N_{km} + \\alpha_{m})}\n",
     "$$\n",
     "\n",
-    "y el logaritmo del mismo, para preparar los cálculos de la predicción soft"
+    "y el logaritmo del mismo, para preparar los cálculos de la predicción soft."
    ]
   },
   {
