'Se terminaron los cambios del tp9 y 10'

--- a/TPs/TP10/TP10_SARMIENTO_104241.ipynb
+++ b/TPs/TP10/TP10_SARMIENTO_104241.ipynb
@@ -1348,7 +1348,9 @@
    "id": "e4fb4bcc",
    "metadata": {},
    "source": [
-    "En este último caso, puede apreciarse que GVB estima muy bien la densidad original, mientras que KMeans y EM no hacen un buen trabajo, ya que fuerzan la aparición de los 6 clusters, mientras que GVB promedia las distribuciones (obtenidas a partir de las muestras de los parámetros) con distintos pesos. La tendencia general demuestra que GVB ajusta mejor el comportamiento de los datos."
+    "En este último caso, puede apreciarse que GVB estima muy bien la densidad original, mientras que KMeans y EM no hacen un buen trabajo, ya que fuerzan la aparición de los 6 clusters, mientras que GVB promedia las distribuciones (obtenidas a partir de las muestras de los parámetros) con distintos pesos. La tendencia general demuestra que GVB ajusta mejor el comportamiento de los datos.\n",
+    "\n",
+    "En definitiva, dado que GVB utiliza gaussianas con distintos pesos, permite modelar de una mejor manera las densidades, apagando aquellas componentes que no tienen gran relevancia, miestras que aquellas que rigen el comportamiento de los datos, tienen mayor peso."
    ]
   }
  ],
