--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": null,
    "id": "eb7ee14d",
    "metadata": {},
    "outputs": [
@@ -728,7 +728,7 @@
     ")\n",
     "\n",
     "\n",
-    "# Se entrena el vectorizador con todos los textos de los libros\n",
+    "# Se entrena el vectorizador con todos los textos de los libros, utilizando los generators para evitar cargar el texto completo\n",
     "train_gen = list(text_generator(X_train_clean))\n",
     "X_train_vec = vectorizer.fit_transform(train_gen)\n",
     "\n",
@@ -746,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "id": "026a7f2c",
    "metadata": {},
    "outputs": [
@@ -888,8 +888,8 @@
     "        print(word, '->', freq)\n",
     "\n",
     "\n",
-    "shared = set(top_alice).intersection(top_spain)\n",
-    "print('Entre los tops de palabras más frecuentes, se comparten:\\n\\n', shared)\n",
+    "# shared = set(top_alice).intersection(top_spain)\n",
+    "# print('Entre los tops de palabras más frecuentes, se comparten:\\n\\n', shared)\n",
     "\n",
     "# print(X_alice.shape)\n",
     "# print(X_spain.shape)\n",
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "id": "1a5565e8",
    "metadata": {},
    "outputs": [],
