'Fin de las correcciones'

--- a/TPs/TP10/TP10_SARMIENTO_104241.ipynb
+++ b/TPs/TP10/TP10_SARMIENTO_104241.ipynb
@@ -861,8 +861,8 @@
    "source": [
     "#### Sobre GVB\n",
     "\n",
-    "El algoritmo busca reemplazar la probabilidad a posteriori $ P(Z|X) $ (donde Z son las variables latentes y las X son los datos observados) por una distribución más simple $Q(Z)$ que se aproxime lo máximo posible a $P(Z|X)$\n",
-    "Para ello, toma una familia de distribuciones simples $Q*(Z)$ donde se seleccionará aquella que minimice la divergencia de Kullback-Leibler (KL) entre que $Q$ y $P$:\n",
+    "El algoritmo busca reemplazar la probabilidad a posteriori $ p(Z|X) $ (donde Z son las variables latentes, es decir, los parámetros de las gaussianas, los pesos y las etiquetas, de qué gaussianas provienen cada una de las muestras y las X son los datos observados) por una distribución más simple $p(Z)$ que se aproxime lo máximo posible a $p(Z|X)$\n",
+    "Para ello, toma una familia de distribuciones simples $q^*(Z)$ donde se seleccionará aquella que minimice la divergencia de Kullback-Leibler (KL) entre que $q$ y $p$:\n",
     "\n",
     "$$\n",
     "q^*(z) = arg_{q \\in P}min KL {q(z|x)||p(z|x)}\n",
@@ -895,7 +895,7 @@
     "\n",
     "La ELBO acota la verosimilitud de forma que maximizar una cota para la verosimilitud, permite maximizar la  misma $ELBO(q(z|x)) \\leq log(p(x))$.\n",
     "\n",
-    "Para minimizar la divergencia $KL$, se asume sobre $P$ la restricción \"Mean Field Approximation\"  ($P$ es el espacio de la familia de funciones donde existe $q$). Dicha restricción asume que $q$ se puede factorizar como productos de densidades tratables, separando las variables ocultas $u$ y los parámetros $\\phi$:\n",
+    "Para minimizar la divergencia $KL$, se asume sobre $P$ la restricción \"Mean Field Approximation\"  ($P$ es el espacio de la familia de funciones donde existe $q$). Dicha restricción asume que $q$ se puede factorizar como productos de densidades tratables, separando las variables ocultas $u$ y los parámetros $\\phi$: (donde las $u$ son las etiquetas y los $\\phi$ son los demás parámetros: los parámetros de las gaussianas y los pesos)\n",
     "\n",
     "Es decir, sea:\n",
     "$$\n",
@@ -1351,7 +1351,7 @@
    "source": [
     "En este último caso, puede apreciarse que GVB estima muy bien la densidad original, mientras que KMeans y EM no hacen un buen trabajo, ya que fuerzan la aparición de los 6 clusters, mientras que GVB promedia las distribuciones (obtenidas a partir de las muestras de los parámetros) con distintos pesos. La tendencia general demuestra que GVB ajusta mejor el comportamiento de los datos.\n",
     "\n",
-    "En definitiva, dado que GVB utiliza gaussianas con distintos pesos, permite modelar de una mejor manera las densidades, apagando aquellas componentes que no tienen gran relevancia, miestras que aquellas que rigen el comportamiento de los datos, tienen mayor peso."
+    "En definitiva, dado que GVB utiliza gaussianas con distintos pesos, permite modelar de una mejor manera las densidades, apagando aquellas componentes que no tienen gran relevancia, mientras que aquellas que describen el comportamiento de los datos, tienen mayor peso."
    ]
   }
  ],
