--- a/TPs/TP9/TP9_SARMIENTO_104241.ipynb
+++ b/TPs/TP9/TP9_SARMIENTO_104241.ipynb
@@ -1009,7 +1009,7 @@
     "\n",
     "luego, se calcula el logaritmo de esta probabilidad, para preparar el cálculo de predict_proba\n",
     "\n",
-    "el paso siguiente, consiste en calcular $\\theta$ :\n",
+    "el paso siguiente, consiste en calcular $\\theta$, es decir, la distribución a posteriori :\n",
     "\n",
     "$$\n",
     "\\theta^{k}_{j}\n",
@@ -1018,7 +1018,9 @@
     "{\\sum_{m=1}^{V} (N_{km} + \\alpha_{m})}\n",
     "$$\n",
     "\n",
-    "y el logaritmo del mismo, para preparar los cálculos de la predicción soft."
+    "y el logaritmo del mismo, para preparar los cálculos de la predicción soft.\n",
+    "\n",
+    "Los $\\alpha$ son los parámetros de la distribución Dirichlett"
    ]
   },
   {
